@@ -8,6 +8,9 @@ Changes with Apache 2.2.31
   *) Correct win32 build issues for mod_proxy exports, OpenSSL 1.0.x headers.
      [Yann Ylavic, Gregg Smith]
 
+  *) core: Do not over allocate memory within 'ap_rgetline_core' for
+     the common case. [Christophe Jaillet]
+
 Changes with Apache 2.2.30 (not released)
 
   *) SECURITY: CVE-2015-3183 (cve.mitre.org)
